<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/upcoming_matches"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="5sp" />

    <ListView
        android:id="@+id/upcoming_matches_list"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="6"
        android:dividerHeight="4px"
        android:divider="@color/colorPrimary"
        android:background="@color/colorLight"
        >
    </ListView>
    <Button
        android:layout_marginTop="20dp"
        android:text="@string/add_new_match"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:id="@+id/btn_new_match"
        android:background="@color/colorPrimary"
        android:textColor="@color/bgColorPrimary"
        />
    <TextView
        android:text="@string/recent_matches"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="5sp" />
    <ListView
        android:id="@+id/recent_matches_list"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="6"
        android:dividerHeight="4px"
        android:divider="@color/colorPrimary"
        android:background="@color/colorLight">
    </ListView>

</LinearLayout>